--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,22 @@
+@media screen and (min-width: 800px) {
+    .tempo {
+        height: 590px;
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    .tempo {
+        height: 700px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .tempo {
+        height: 100%;
+    }
+}
+
+
 .who-image {
     margin-top: 10px;
     height: 230px;
@@ -50,9 +69,8 @@
 
 .tempo {
     width: 100%;
-    height: 100%;
 }
 
 .first_section {
-    margin-top: 50px;
+    margin-top: 40px;
 }
