--- a/css/custom.css
+++ b/css/custom.css
@@ -74,3 +74,19 @@
 .first_section {
     margin-top: 50px;
 }
+
+#page-top {
+    background-color: silver;
+}
+
+#root-container {
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#mainNav {
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+}
